# upm

./: Cargo.toml  README.md  build.rs  sample.config.toml
src/: main.rs  managers.rs  uninstall.rs
upm-lib/: Cargo.toml
upm-lib/src/: lib.rs
upm-lib/test-files/pacman/: version.sh
upm_lib/: Cargo.toml  LICENSE.md
upm_lib/src/: lib.rs
upm_lib/test-files/: pacman.toml
upm_lib/test-files/cargo/: version.sh
